AG-1895 - Fix issue with balham-dark and illegible overlay text

--- a/packages/ag-grid/src/styles/_ag-theme-balham-common.scss
+++ b/packages/ag-grid/src/styles/_ag-theme-balham-common.scss
@@ -276,7 +276,7 @@ $disabled-foreground-color-opacity: 0.38 !default;
     }
 
     .ag-overlay-loading-center {
-        background-color: #fff;
+        background-color: $default-background;
         border: 1px solid $border-color;
         color: $foreground-color;
         padding: $grid-size * 4;
